<resources>
    <string name="app_name">Tip Time</string>
    <string name="como_foi_o_servi_o">Como foi o serviço?</string>
    <string name="muito_bom_20">Muito bom (20%)</string>
    <string name="bom_18">Bom (18%)</string>
    <string name="custo_do_servi_o">Custo do serviço</string>
    <string name="razo_vel_15">Razoável (15%)</string>
    <string name="voc_deseja_arredondar_a_gorjeta">Você deseja arredondar a gorjeta?</string>
    <string name="calcular">Calcular</string>
    <string name="valor_da_gorjeta">Valor da Gorjeta: %s</string>
</resources>