<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/custo_servico"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/custo_do_servi_o"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/como_foi_o_servi_o"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custo_servico" />

    <RadioGroup
        android:id="@+id/opcoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/opcao_vinte"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questoes">

        <RadioButton
            android:id="@+id/opcao_vinte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muito_bom_20" />

        <RadioButton
            android:id="@+id/opcao_dezoito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bom_18" />

        <RadioButton
            android:id="@+id/opcao_quinze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/razo_vel_15" />
    </RadioGroup>

    <Switch
        android:id="@+id/arredondar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/voc_deseja_arredondar_a_gorjeta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opcoes"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/botao_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arredondar" />

    <TextView
        android:id="@+id/resultado_gorjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_da_gorjeta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botao_calcular" />


</androidx.constraintlayout.widget.ConstraintLayout>